# aws-sso-admin-tools

./: README.md  funcs.py  manage-account-assignments.py  manage-apps.py  manage-permission-set.py  manage-users-groups.py  pyproject.toml
src/aws_sso_admin_tools/: aws_sso_admin.py  funcs.py  manage_account_assignments.py  manage_apps.py  manage_permission_sets.py  manage_users_groups.py
